--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,6 @@ compatibility_date = "2023-01-01"
 binding = "DB"
 database_name = "sakura-share"
 database_id = "9fb790c8-d305-4739-b920-5693cb223bc4"
+
+[placement]
+mode = "smart"
