--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,15 +11,12 @@ database_id = "9fb790c8-d305-4739-b920-5693cb223bc4"
 mode = "smart"
 
 routes = [
-  "sakura-share.one/register-node*",
-  "sakura-share.one/verify-node*",
-  "sakura-share.one/delete-node*",
-  "sakura-share.one/completion*",
-  "sakura-share.one/completions*",
-  "sakura-share.one/v1/chat/completions*",
-  "sakura-share.one/health*"
-]
-
-routes = [
+  "sakura-share.one/register-node",
+  "sakura-share.one/verify-node",
+  "sakura-share.one/delete-node",
+  "sakura-share.one/completion",
+  "sakura-share.one/completions",
+  "sakura-share.one/v1/chat/completions",
+  "sakura-share.one/health",
   "sakura-share.1percentsync.games/*"
 ]
